# anytraverse-ros

./: .gitattributes  .gitignore  README.md  pixi.toml  rtabmap.sh  test_robot.py
docs/: comm_base.md  robot.md
launch/: anytraverse_oakd.launch.py
logs/: hound_log_20260109_182620.csv  hound_log_20260109_182912.csv  hound_log_20260109_183409.csv  hound_log_20260109_183517.csv  hound_log_20260109_183536.csv  hound_log_20260109_183558.csv  hound_log_20260109_183623.csv  hound_log_20260109_183717.csv  hound_log_20260109_183850.csv  hound_log_20260109_183935.csv  hound_log_20260109_184018.csv  hound_log_20260109_184120.csv  hound_log_20260109_184533.csv  hound_log_20260109_185639.csv  hound_log_20260109_185832.csv  hound_log_20260109_190014.csv  hound_log_20260109_190205.csv  hound_log_20260110_181345.csv  hound_log_20260110_182023.csv  hound_log_20260110_182856.csv  rhino_log_20260110_183353.csv  rhino_log_20260110_184350.csv  rhino_log_20260110_185025.csv  rhino_log_20260110_190253.csv  rhino_log_20260110_190354.csv  rhino_log_20260110_190446.csv  rhino_log_20260110_190525.csv
src/anytraverse_bringup/: package.xml  setup.cfg  setup.py
src/anytraverse_interfaces/: CMakeLists.txt  package.xml
src/anytraverse_interfaces/srv/: HumanOperatorCallSrv.srv
src/anytraverse_ros/: package.xml  setup.cfg  setup.py
src/moonlab_robots/: package.xml  setup.cfg  setup.py
src/moonlab_robots/launch/: robot.launch.py  (+2 more)
src/oakd_ros/: package.xml  setup.cfg  setup.py
src/seg_to_obst/: package.xml  setup.cfg  setup.py
src/trav_map_navigation/: package.xml  setup.cfg  setup.py
(+43 files in other folders)
